home about work 1st final

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
     <title>Divyanshu Gautam</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="text-white bg-black"></div>
   </body>
 </html>
